# Agentic_commerce_datn

./: .gitignore  MIGRATION_GUIDE.md  env.example
app/: product.json  pyproject.toml  requirements.txt
app/agents/: __init__.py
app/alembic/: env.py
app/alembic/versions/: 3f6c044564a1_init_tables.py  823f8198c11c_seed_data_test.py
app/api/: __init__.py  main.py
app/graph/: state.py
app/models/: __init__.py  base.py  product.py  user.py
app/services/: __init__.py
app/tests/: __init__.py  get_data.py  test_db_connection.py
ui/: README.md
